# pyp2spec

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE-MIT  LICENSE-MIT-0  MANIFEST.in  README.md  conf2spec.py  config.py  mkdocs.yml  pyp2conf.py  pyp2spec.py  pyproject.toml  requirements.txt  setup.cfg  template.spec  tox.ini
.github/workflows/: ci.yml
docs/: changelog.md  docs-readme.md  index.md
docs/contributing/: development-setup.md
docs/examples/: automode.md  basic-packages.md  custom-configuration.md
docs/getting-started/: installation.md  quick-start.md
pyp2spec/: classifiers_to_fedora.json  conf2spec.py  license_processor.py  local_loaders.py  pyp2conf.py  pyp2spec.py  pypi_loaders.py  rpmversion.py  tar_loaders.py  template.spec  utils.py
tests/: conftest.py  fedora_license_data.json  test_conf2spec.py  test_license_processor.py  test_local_loaders.py  test_pyp2conf.py  test_pypi_loaders.py  test_utils.py
tests/expected_specfiles/: pyp2spec_aioflo.spec  pyp2spec_boutdata.spec  pyp2spec_markdown-it-py.spec  python-aioflo.spec  python-aionotion.spec  python-boutdata.spec  python-click.spec  python-jupyter-packaging.spec  python-local-test.spec  python-markdown-it-py.spec  python-numpy.spec  python-pello.spec  python-pytest7.2.spec  python-pytest7.spec  python-sphinx.spec  python-tomli.spec  python-urllib3_2.spec  python3.9-pello.spec
tests/expected_specfiles/customized/: python-aioflo.spec  python-aionotion.spec  python-boutdata.spec  python-click.spec  python-jupyter-packaging.spec  python-markdown-it-py.spec  python-tomli.spec
tests/expected_specfiles/default/: python-aioflo.spec  python-aionotion.spec  python-click.spec  python-jupyter-packaging.spec  python-markdown-it-py.spec
tests/fixtures/cassettes/: test_pyp2conf.test_OSI_Approved_is_ignored.json  test_pyp2conf.test_archful_package.json  test_pyp2conf.test_automatically_generated_compat_config_is_valid[pytest-7-None].json  test_pyp2conf.test_automatically_generated_compat_config_is_valid[pytest-7.2-7.2.1].json  test_pyp2conf.test_automatically_generated_config_is_valid[aioflo-0.4.2].json  test_pyp2conf.test_automatically_generated_config_is_valid[aionotion-2.0.3].json  test_pyp2conf.test_automatically_generated_config_is_valid[click-7.1.2].json  test_pyp2conf.test_automatically_generated_config_is_valid[click-8.1.7].json  test_pyp2conf.test_automatically_generated_config_is_valid[jupyter-packaging-0.10.4].json  test_pyp2conf.test_automatically_generated_config_is_valid[markdown-it-py-1.1.0].json  test_pyp2conf.test_automatically_generated_config_with_alt_python_is_valid[Pello-1.0.4-3.9].json  test_pyp2conf.test_bad_license_if_compliant_is_not_returned.json  test_pyp2conf.test_bad_license_if_not_compliant_is_returned.json  test_pyp2conf.test_compliant_license_is_returned.json  test_pyp2conf.test_config_is_valid.json  test_pyp2conf.test_config_with_customization_is_valid.json  test_pyp2conf.test_license_classifier_read_correctly.json  test_pyp2conf.test_mix_non_compliant_licenses_wont_work_if_strict.json  test_pyp2conf.test_mix_non_compliant_licenses_work_if_not_strict.json  test_pyp2conf.test_no_homepage_in_metadata.json  test_pyp2conf.test_no_license_classifiers_and_no_license_keyword.json  (+21 more)
tests/local/: local_test-0.12.2-py3-none-any.whl
tests/pyp2spec_click/: pyp2spec_click.conf
tests/pyp2spec_jupyter-packaging/: pyp2spec_jupyter-packaging.conf  pyp2spec_jupyter-packaging.spec
tests/pyp2spec_tomli/: pyp2spec_tomli.conf  pyp2spec_tomli.spec
tests/test_conf2spec/: pyp2spec_aionotion.spec  pyp2spec_click.spec
tests/test_configs/: customized_aioflo.conf  customized_aionotion.conf  customized_boutdata.conf  customized_click.conf  customized_jupyter-packaging.conf  customized_markdown-it-py.conf  customized_python-sphinx.conf  customized_tomli.conf  customized_tornado.conf  default_python-aioflo.conf  default_python-aionotion.conf  default_python-click.conf  default_python-jupyter-packaging.conf  default_python-local-test.conf  default_python-markdown-it-py.conf  default_python-numpy.conf  default_python-pello.conf  default_python-pytest7.2.conf  default_python-pytest7.conf  default_python-urllib3_2.conf  default_python3.9-pello.conf  pyp2spec_aioflo.conf  pyp2spec_aionotion.conf  pyp2spec_boutdata.conf  pyp2spec_click.conf  pyp2spec_jupyter-packaging.conf  pyp2spec_markdown-it-py.conf  pyp2spec_tomli.conf
