[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pyp2spec"
version = "0.9.0"
description = "Generate a valid Fedora specfile from Python package from PyPI"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
    { name = "Karolina Surma", email = "ksurma@redhat.com" }
]
license = { text = "MIT AND MIT-0" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: POSIX :: Linux",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: MIT No Attribution License (MIT-0)",
    "Development Status :: 3 - Alpha"
]

dependencies = [
    "click",
    "jinja2",
    "license-expression",
    "packaging",
    "requests",
    'tomli; python_version < "3.11"',
    "tomli-w"
]

[project.urls]
homepage = "https://github.com/befeleme/pyp2spec/"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-regressions",
    "betamax"
]

[project.scripts]
pyp2spec = "pyp2spec.pyp2spec:main"
conf2spec = "pyp2spec.conf2spec:main"
pyp2conf = "pyp2spec.pyp2conf:main"

[tool.setuptools.package-data]
pyp2spec = [
    "template.spec",
    "classifiers_to_fedora.json"
]
