[metadata]
name = pyp2spec
version = 0.1
description = My package description
long_description = file: README.md, LICENSE-MIT, LICENSE-CCO
license = MIT, CCO

[options]
install_requires =
    click
    jinja2
    requests
    tomli
    tomli-w
py_modules =
    conf2spec
    config
    pyp2conf
    pyp2spec

[options.entry_points]
console_scripts =
    main = pyp2spec:main

[options.data_files]
. = *.spec