[metadata]
name = pyp2spec
version = 0.4.0
author = Karolina Surma
author_email = ksurma@redhat.com
description = Generate a valid Fedora specfile from Python package from PyPI
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT, CC0
license_files =
    LICENSE-MIT
    LICENSE-CC0
url = https://github.com/befeleme/pyp2spec/
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Operating System :: POSIX :: Linux
    License :: OSI Approved :: MIT License
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication

[options]
packages = find:
python_requires = >=3.8
install_requires =
    click
    jinja2
    packaging
    requests
    tomli
    tomli-w
include_package_data = True

[options.package_data]
pyp2spec =
    template.spec
    classifiers_to_fedora.json

[options.extras_require]
test =
    pytest
    pytest-regressions
    betamax

[options.entry_points]
console_scripts =
    pyp2spec = pyp2spec.pyp2spec:main
    conf2spec = pyp2spec.conf2spec:main
    pyp2conf = pyp2spec.pyp2conf:main
