[metadata]
name = pyp2spec
version = 0.8.0
author = Karolina Surma
author_email = ksurma@redhat.com
description = Generate a valid Fedora specfile from Python package from PyPI
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT, MIT-0
license_files =
    LICENSE-MIT
    LICENSE-MIT-0
url = https://github.com/befeleme/pyp2spec/
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: POSIX :: Linux
    License :: OSI Approved :: MIT License
    License :: OSI Approved :: MIT No Attribution License (MIT-0)
    Development Status :: 3 - Alpha

[options]
packages = find:
python_requires = >=3.9
install_requires =
    click
    jinja2
    license-expression
    packaging
    requests
    tomli;python_version<"3.11"
    tomli-w
include_package_data = True

[options.package_data]
pyp2spec =
    template.spec
    classifiers_to_fedora.json

[options.extras_require]
test =
    pytest
    pytest-regressions
    betamax

[options.entry_points]
console_scripts =
    pyp2spec = pyp2spec.pyp2spec:main
    conf2spec = pyp2spec.conf2spec:main
    pyp2conf = pyp2spec.pyp2conf:main
